--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "cSpell.language": "pt",
-    "Lua.telemetry.enable": false
+    "Lua.telemetry.enable": false,
+    "cSpell.language": "en,pt-BR"
 }
